--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skynet-mobile-plugin-greeting",
   "version": "0.0.9",
-  "description": "Skynet Mobile Greeting Plugin",
+  "description": "Meshblu Mobile Greeting Plugin",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
